--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "agenda": "^2.0.2",
     "axios": "^0.18.0",
     "bcrypt-nodejs": "latest",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "connect-flash": "~0.1.1",
