--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "~1.14.1",
     "helmet": "^3.15.1",
