--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ CONSUMER_KEY=W4ldYkgtPrpXnO0tBjH88xSLj
 CONSUMER_SECRET=BbRonjXSDW0toIeE8buTJ2sPTxdCsskkxTMlM3Bla5ifIIywcn
 ACCESS_TOKEN=1611931838-igcKj96ks0S8YrcMU0s8Jkx5tqLgP1JuWMvB2On
 ACCESS_SECRET=S4bkSjZ9jqqANaTJMjFAPiFDxWYvuYVBzxnI1hsyVk8gB
+Instausername=ali.atwa2040
+Instapass=159951ali
