--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "express-session": "~1.14.1",
     "helmet": "^3.15.1",
+    "instagram-nodejs-without-api": "^1.2.0",
     "method-override": "~2.3.6",
     "mocha": "^5.2.0",
     "mongoose": "^5.4.12",
