--- a/.env
+++ b/.env
@@ -3,5 +3,11 @@ CONSUMER_KEY=W4ldYkgtPrpXnO0tBjH88xSLj
 CONSUMER_SECRET=BbRonjXSDW0toIeE8buTJ2sPTxdCsskkxTMlM3Bla5ifIIywcn
 ACCESS_TOKEN=1611931838-igcKj96ks0S8YrcMU0s8Jkx5tqLgP1JuWMvB2On
 ACCESS_SECRET=S4bkSjZ9jqqANaTJMjFAPiFDxWYvuYVBzxnI1hsyVk8gB
+
+CONSUMER_KEY_TUMBLR=nvWIrEj2N833DUGk2b8Gv0AvD2HBLWNLFS1WMrnGUipnoXeEju
+CONSUMER_SECRET_TUMBLR=xYytIhpYqRt8e2MvX03eOh1ge5SpxkBriMPo8sk3VWPPREH5cA
+ACCESS_TOKEN_TUMBLR=5syGGWNK6QkrAtO6i4wLgZ4aoZY1KbrGTDG28x3hximXoxv68x
+ACCESS_SECRET_TUMBLR=4SZzwuS598qpkSJScGxR1tzAj9XIOBGk83e6b1douL5Y8PKLGV
+
 Instausername=ali.atwa2040
 Instapass=159951ali
