--- a/.env
+++ b/.env
@@ -9,5 +9,12 @@ CONSUMER_SECRET_TUMBLR=xYytIhpYqRt8e2MvX03eOh1ge5SpxkBriMPo8sk3VWPPREH5cA
 ACCESS_TOKEN_TUMBLR=5syGGWNK6QkrAtO6i4wLgZ4aoZY1KbrGTDG28x3hximXoxv68x
 ACCESS_SECRET_TUMBLR=4SZzwuS598qpkSJScGxR1tzAj9XIOBGk83e6b1douL5Y8PKLGV
 
+
+CONSUMER_KEY_Reddit=CTQbnMF8cslUZg
+CONSUMER_SECRET_Reddit=gCTxlkDIDaJLovxG4jyiYYRJJTQ
+ACCESS_TOKEN_Reddit=ali-atwa
+ACCESS_SECRET_Reddit=159951
+
+
 Instausername=ali.atwa2040
 Instapass=159951ali
