--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux": "^4.0.1",
     "rotating-file-stream": "^1.4.0",
     "should": "^13.2.3",
+    "snoowrap": "^1.15.2",
     "tumblr.js": "^2.0.0",
     "twit": "^2.2.11"
   },
