--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer-sendgrid": "^1.0.3",
     "passport": "0.4.0",
     "passport-local": "~1.0.0",
+    "paypal-rest-sdk": "^1.8.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.0",
